client/src/component/Home/home.css
.all-gigs-container {
  display: grid;
  padding: 2rem 1.5rem 0;
}

@media screen and (min-width: 600px) {
  .all-gigs-container {
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (min-width: 760px) {
  .all-gigs-container {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media screen and (min-width: 900px) {
  .all-gigs-container {
    grid-template-columns: 1fr 1fr 1fr 1fr;
    gap: 0.8rem;
  }
}

@media screen and (min-width: 1100px) {
  .all-gigs-container {
    margin: 0 20px;
    padding: inherit 2rem;
  }
}

@media screen and (min-width: 1240px) {
  .all-gigs-container {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  }
}

